--- a/_config.yml
+++ b/_config.yml
@@ -9,10 +9,10 @@
 # Basic Site Settings
 locale                   : "en-US"
 site_theme               : "default" # Currently available options are "default", "air"
-title                    : "Claire Yuqing Yang/ MS in Applied Statistics for Social Science Research in NYU"
+title                    : "Claire Yuqing Yang"
 title_separator          : "-"
-name                     : &name "Your Name"
-description              : &description "Your Name's academic portfolio"   # Update this with a general description of your site, this is the default if not overridden by a page
+name                     : &name "Claire Yuqing Yang"
+description              : &description "MS Student at NYU- Applied Statistics for Social Science Research"   # Update this with a general description of your site, this is the default if not overridden by a page
 url                      : https://ClaireYuqingYang.github.io # The base hostname & protocol for your site e.g. "https://[your GitHub username].github.io",
                                                            # or if you already have some other page hosted on Github then use "https://[your GitHub username].github.io/[Your Repo Name]"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
