--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,13 +1,13 @@
 # Authors
 
 Name Name:
-  name        : "Name Name"
-  uri         : "https://name.com"
-  email       : "name@name.com"
-  bio         : "This is the first name."
+  name        : "Claire Yuqing Yang"
+  uri         : "https://claireyuqingyang.github.io/portfolio/"
+  email       : "yy5550@nyu.edu"
+ # bio         : "This is the first name."
   avatar      : "bio-photo-2.jpg"
-  twitter     : "name"
-  google_plus : "Name"
+#  twitter     : "name"
+#  google_plus : "Name"
 
 Name2 Name2:
   name        : "Name2 Name2"
